sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:13: error: type mismatch;
 found   : Unit
 required: Int
    numABouger = longerWay(nbrB, posJABouger)
                          ^NaiveBaseball:22: warning: enclosing method longerWay has result type Unit: return value discarded
    return player2
    ^NaiveBaseball:32: warning: enclosing method longerWay has result type Unit: return value discarded
    return player1
    ^NaiveBaseball:36: warning: enclosing method longerWay has result type Unit: return value discarded
    return player2
    ^